--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,6 @@
 [submodule ".vim/bundle/vim-eunuch.git"]
 	path = .vim/bundle/vim-eunuch.git
 	url = https://github.com/tpope/vim-eunuch.git
+[submodule ".vim/bundle/zencoding-vim.git"]
+	path = .vim/bundle/zencoding-vim.git
+	url = https://github.com/mattn/zencoding-vim.git
