--- a/.gitmodules
+++ b/.gitmodules
@@ -46,3 +46,12 @@
 [submodule ".vim/bundle/zencoding-vim.git"]
 	path = .vim/bundle/zencoding-vim.git
 	url = https://github.com/mattn/zencoding-vim.git
+[submodule ".vim/bundle/nerdtree.git"]
+	path = .vim/bundle/nerdtree.git
+	url = https://github.com/scrooloose/nerdtree.git
+[submodule ".vim/bundle/webapi-vim.git"]
+	path = .vim/bundle/webapi-vim.git
+	url = https://github.com/mattn/webapi-vim.git
+[submodule ".vim/bundle/TableKnight.git"]
+	path = .vim/bundle/TableKnight.git
+	url = git://github.com/codepiano/TableKnight.git
