--- a/.gitmodules
+++ b/.gitmodules
@@ -67,3 +67,27 @@
 [submodule ".vim/bundle/ack.vim.git"]
 	path = .vim/bundle/ack.vim.git
 	url = https://github.com/mileszs/ack.vim.git
+[submodule ".vim/bundle/vim-matchit.git"]
+	path = .vim/bundle/vim-matchit.git
+	url = https://github.com/edsono/vim-matchit.git
+[submodule ".vim/bundle/vim-multiple-cursors.git"]
+	path = .vim/bundle/vim-multiple-cursors.git
+	url = https://github.com/terryma/vim-multiple-cursors.git
+[submodule ".vim/bundle/NrrwRgn.git"]
+	path = .vim/bundle/NrrwRgn.git
+	url = https://github.com/chrisbra/NrrwRgn.git
+[submodule ".vim/bundle/vim-surround.git"]
+	path = .vim/bundle/vim-surround.git
+	url = https://github.com/tpope/vim-surround.git
+[submodule ".vim/bundle/tlib_vim.git"]
+	path = .vim/bundle/tlib_vim.git
+	url = https://github.com/tomtom/tlib_vim.git
+[submodule ".vim/bundle/vim-unimpaired.git"]
+	path = .vim/bundle/vim-unimpaired.git
+	url = https://github.com/tpope/vim-unimpaired.git
+[submodule ".vim/bundle/ZoomWin.git"]
+	path = .vim/bundle/ZoomWin.git
+	url = https://github.com/itspriddle/ZoomWin.git
+[submodule ".vim/bundle/vim-snippets.git"]
+	path = .vim/bundle/vim-snippets.git
+	url = https://github.com/honza/vim-snippets.git
