--- a/.gitmodules
+++ b/.gitmodules
@@ -91,3 +91,6 @@
 [submodule ".vim/bundle/vim-snippets.git"]
 	path = .vim/bundle/vim-snippets.git
 	url = https://github.com/honza/vim-snippets.git
+[submodule ".vim/bundle/slimv.git"]
+	path = .vim/bundle/slimv.git
+	url = https://github.com/vim-scripts/slimv.vim.git
