--- a/.gitmodules
+++ b/.gitmodules
@@ -43,9 +43,6 @@
 [submodule ".vim/bundle/vim-eunuch.git"]
 	path = .vim/bundle/vim-eunuch.git
 	url = https://github.com/tpope/vim-eunuch.git
-[submodule ".vim/bundle/zencoding-vim.git"]
-	path = .vim/bundle/zencoding-vim.git
-	url = https://github.com/mattn/zencoding-vim.git
 [submodule ".vim/bundle/nerdtree.git"]
 	path = .vim/bundle/nerdtree.git
 	url = https://github.com/scrooloose/nerdtree.git
@@ -103,3 +100,6 @@
 [submodule ".vim/bundle/vim-javascript-syntax.git"]
 	path = .vim/bundle/vim-javascript-syntax.git
 	url = git@github.com:jelera/vim-javascript-syntax.git
+[submodule ".vim/bundle/emmet-vim"]
+	path = .vim/bundle/emmet-vim
+	url = git@github.com:mattn/emmet-vim.git
