--- a/.gitmodules
+++ b/.gitmodules
@@ -106,3 +106,15 @@
 [submodule ".vim/bundle/Align.git"]
 	path = .vim/bundle/Align.git
 	url = git@github.com:vim-scripts/Align.git
+[submodule ".vim/bundle/vim-less.git"]
+	path = .vim/bundle/vim-less.git
+	url = git@github.com:groenewege/vim-less.git
+[submodule ".vim/bundle/vim-jade.git"]
+	path = .vim/bundle/vim-jade.git
+	url = git://github.com/digitaltoad/vim-jade.git
+[submodule ".vim/bundle/funcoo.vim"]
+	path = .vim/bundle/funcoo.vim
+	url = https://github.com/rizzatti/funcoo.vim.git
+[submodule ".vim/bundle/dash.vim.git"]
+	path = .vim/bundle/dash.vim.git
+	url = https://github.com/rizzatti/dash.vim.git
