--- a/.gitmodules
+++ b/.gitmodules
@@ -121,3 +121,6 @@
 [submodule ".vim/bundle/syntastic.git"]
 	path = .vim/bundle/syntastic.git
 	url = git@github.com:scrooloose/syntastic.git
+[submodule ".vim/bundle/coffeelint.git"]
+	path = .vim/bundle/coffeelint.git
+	url = git@github.com:clutchski/coffeelint.git
